infrastructure/service.yaml
# web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: XXXX
  namespace: stan-ns
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: XXXX
  type: NodePort
